[tool.poetry]
name = "rl"
version = "0.1.0"
description = ""
authors = ["Marc Svensson"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.0"
ipykernel = "^6.25.2"
matplotlib = "^3.8.0"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
